i have learned lombok annotations to avoid boilore plate code to make devs faster

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
     <artifactId>gson</artifactId>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+</dependency>
+
+
 		
 	</dependencies>
 
