--- a/payment-processing-system/src/main/resources/application.properties
+++ b/payment-processing-system/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-spring.application.name=Payment-processing-service
+spring.profiles.active=@spring.profiles.active@
+endpoints.shutdown.enabled=true
+management.security.enabled=false
 server.port=8081
-spring.datasource.username=root
-spring.datasource.password=2002@~2030$&2050
-spring.datasource.url=jdbc:mysql://localhost:3306/ecomm
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.application.name=payment-validation-service
+spring.jmx.default-domain=payment-validation-service
 
-razorpay.key.id=null
-razorpay.secret.key=null
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
